Fixed a conflict with the bottom bar on iOS

--- a/less/forum.less
+++ b/less/forum.less
@@ -19,7 +19,7 @@
     height: 100%;
 
     margin: 0 auto;
-    padding: 0;
+    padding: 0 0 env(safe-area-inset-bottom, 0);
     text-align: center;
 
     li {
